# hermes-context-manager

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  after-install.md  config.yaml.example  plugin.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
hermes_context_manager/: __init__.py  analytics.py  background_compressor.py  code_filter.py  config.py  dashboard.py  engine.py  normalizer.py  persistence.py  plugin.py  prompts.py  short_circuits.py  state.py  truncation.py
hmc_skill/: SKILL.md
tests/: test_analytics.py  test_background_compressor.py  test_code_filter.py  test_config.py  test_dashboard.py  test_engine.py  test_index.py  test_normalizer.py  test_persistence.py  test_plugin_hooks.py  test_short_circuits.py  test_truncation.py
